# ai-awards-judge

./: .gitignore  AI_Judging_Process_Overview_16x9.html  Dockerfile  JUDGE_RESULTS.csv  JUDGE_RESULTS_WITH_FEEDBACK.csv  JUDGE_RESULTS_WITH_FEEDBACK.md  JUDGE_SCORING_GUIDE.md  JUDGE_SCORING_SHEET.csv  PROJECT_INDEX.md  README.md  award_judging_report.md  pyproject.toml
.github/workflows/: tests.yml
award_entries_text/: Best AI for Registration & Onboarding - Baran, Eventpack, Kerem.txt  Best AI for Social Media & Community Building - Wadenholt Vrethem, Voxo, Johan.txt
award_review/: README.md  evidence-confidence-notes.md  judge-calibration-memo.md  master-score-sheet.md
award_review/extracted_text/: Best AI for Registration & Onboarding - Kamau, InEvent, Tracy.txt  Best AI for Registration & Onboarding - Krueger, EventMobi, Brandt.txt  Best AI for Registration & Onboarding - Seifert, eBrain Technology Group GmbH, Linnea.txt  Best AI for Social Media & Community Building - Belcher, MyGraduationClip, RIch.txt  Best Collaboration Between Agency_Organiser & AI Supplier - Radford, gassProductions, Daniel.txt  (+12 more)
config/: categories.yaml  output_templates.yaml  prompts.yaml  rubric.yaml
docs/: deployment.md  github-publish-checklist.md  handoff_nontechnical.md  handoff_technical.md  hybrid-publishing.md  methodology.md  push-to-github.md  rubric.md
private_archive_reference/: README.md
scripts/: bootstrap_repo.sh
skill/: event-awards-judge.skill
templates/: master_summary_template.md  report_template.md
tests/: test_parser_and_scoring.py  test_planner.py
(+25 files in other folders)
